updates to the package details

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "type": "service",
+  "chain": "ethereum",
+  "mainService": "bor",
   "author": "MysticRyuujin (https://github.com/MysticRyuujin)",
   "contributors": [
     "androolloyd <opensource@andrewredden.com> (https://github.com/androolloyd)",
