--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,7 +1,7 @@
 {
   "name": "polygon.public.dappnode.eth",
   "version": "0.1.0",
-  "description": "",
+  "description": "Polygon is a protocol and a framework for building and connecting Ethereum-compatible blockchain networks. Aggregating scalable solutions on Ethereum supporting a multi-chain Ethereum ecosystem.",
   "type": "service",
   "chain": "ethereum",
   "mainService": "bor",
