--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -7,7 +7,7 @@
   "mainService": "bor",
   "author": "MysticRyuujin (https://github.com/MysticRyuujin)",
   "contributors": [
-    "androolloyd <opensource@andrewredden.com> (https://github.com/androolloyd)",
+    "androolloyd <opensource@andrewredden.com> (https://github.com/androolloyd)"
   ],
   "categories": [
     "Developer tools", "Blockchain", "Communications"
