--- a/releases.json
+++ b/releases.json
@@ -16,5 +16,11 @@
     "uploadedTo": {
       "dappnode": "Fri, 16 Jul 2021 14:48:07 GMT"
     }
+  },
+  "0.1.3": {
+    "hash": "/ipfs/QmZK5eptuQiRqX18QMwphxUd15DP2BsxF19Y5he149pr2s",
+    "uploadedTo": {
+      "dappnode": "Sun, 18 Jul 2021 12:12:16 GMT"
+    }
   }
 }
