--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - SNAPSHOT_URL=	https://matic-blockchain-snapshots.s3-accelerate.amazonaws.com/matic-mainnet/heimdall-snapshot-2022-02-07.tar.gz
       - BOOTSTRAP=1
       - ETH1_RPC_URL=http://fullnode.dappnode:8545
+      - BOOTNODES=
     restart: unless-stopped
   heimdallr:
     environment:
